# wheel_legged_genesis

./: README.md  pyproject.toml
assets/mjcf/nz/: nz.xml  nz_mapping.xml  scene.xml
assets/urdf/nz/urdf/: nz.csv
locomotion/: model_test.py  wheel_legged_env.py  wheel_legged_eval.py  wheel_legged_train.py
logs/wheel-legged-walking/: cfgs.pkl  model_10000.pt  model_9000.pt  model_9100.pt  model_9200.pt  model_9300.pt  model_9400.pt  model_9500.pt  model_9600.pt  model_9700.pt  model_9800.pt  model_9900.pt  policy.pt
logs/wheel-legged-walkingv0.0.8/: cfgs.pkl  model_10000.pt  model_4000.pt  model_5000.pt  model_6000.pt  model_7000.pt  model_8000.pt  model_9000.pt  policy.pt
sim2real/: CMakeLists.txt
sim2real/.cache/clangd/index/: DMMotor.cpp.8537909E2D65249F.idx  DMMotor.h.42712D8F1ED2129B.idx  MiMotor.cpp.DBB01DD4C5932562.idx  MiMotor.h.1F2E849CCA1AD7DC.idx  Motor.hpp.BD68E0D13A448662.idx  PCAN.cpp.AC36BBFE69B7629E.idx  PCAN.hpp.BBB84BED91307987.idx  RMMotor.cpp.953484A161F6F6E9.idx  RMMotor.h.364BF2B540E1B4F5.idx  magic_enum.hpp.5C70711117D4A65A.idx  main.cpp.8DA9131572484E87.idx
sim2real/include/: DMMotor.h  MiMotor.h  Motor.hpp  PCAN.hpp
sim2real/motor_test/: CMakeLists.txt  dm_test.cpp  mi_test.cpp
sim2real/motor_test/.cache/clangd/index/: DMMotor.cpp.80B9761A8A992E05.idx  DMMotor.h.3C5101A657D8C1E9.idx  MiMotor.cpp.1B9A38263F5BD16D.idx  MiMotor.h.2B8518B2019875C6.idx  Motor.hpp.1E54E6ACC2BFB31C.idx  PCAN.cpp.9F7420457BA0D7DB.idx  PCAN.hpp.942E4B411BE881B0.idx  RMMotor.cpp.9DD8DA473F1A6A57.idx  RMMotor.h.6A4D7FA3B17A4E39.idx  dm_test.cpp.65C2A1F4730B3BE3.idx  magic_enum.hpp.FB2A35F8639B7DF1.idx  mi_test.cpp.FCC82CF7AC82D36B.idx
sim2real/motor_test/include/: DMMotor.h  MiMotor.h  Motor.hpp  PCAN.hpp  RMMotor.h
sim2real/motor_test/src/: DMMotor.cpp  MiMotor.cpp  PCAN.cpp
sim2real/nz_ros2_deploy/src/CommunicationCenter/: CMakeLists.txt  package.xml
sim2real/nz_ros2_deploy/src/CommunicationCenter/.cache/clangd/index/: CommunicationCenter.cpp.1434190FA0D6CBFA.idx  CommunicationCenter.h.D5B2A43A6D07855A.idx  DMMotor.cpp.6B87FFDE9F9D8DF3.idx  DMMotor.h.FA492CC5B341470E.idx  MiMotor.cpp.FEC19FA1F02D4E3D.idx  MiMotor.h.1567EDC7E434DBCF.idx  Motor.hpp.CD4E8D26BB28A458.idx  PCAN.cpp.55AD61A0D962C9A1.idx  PCAN.cpp.CC662C84C624604C.idx  PCAN.hpp.55D86D4536F56AAF.idx  RMMotor.cpp.E81BC01FCD571465.idx  RMMotor.h.2C691D40F1ABBE92.idx  base_Comcente.cpp.F8835C6E634D29FA.idx  base_Comcenter.h.6C13DBC7F08AAEAC.idx  gamepad.cpp.F009D4567F0C6E3B.idx  gamepad.h.71327BE1813D1DE0.idx  gamepadkey.h.44A46ED27713911E.idx  main.cpp.AD05B8B1EF84733D.idx  serial.cpp.D56FF6459215F4F6.idx  serial.hpp.F25F513B45F4C60F.idx
sim2real/nz_ros2_deploy/src/CommunicationCenter/include/: CommunicationCenter.h  PCAN.hpp  serial.hpp
sim2real/nz_ros2_deploy/src/CommunicationCenter/motor_driver/: DMMotor.cpp  DMMotor.h  MiMotor.cpp  MiMotor.h  Motor.hpp
sim2real/nz_ros2_deploy/src/CommunicationCenter/src/: CommunicationCenter.cpp  PCAN.cpp  main.cpp  serial.cpp
sim2real/nz_ros2_deploy/src/mujoco_mapping/: CMakeLists.txt
sim2real/nz_ros2_deploy/src/nz-imu/: CMakeLists.txt  package.xml
sim2real/nz_ros2_msg/src/nz_msg/: CMakeLists.txt  package.xml
sim2real/nz_ros2_msg/src/nz_msg/msg/: Motor.msg  MotorCtrl.msg
sim2real/ros2/src/mujoco_mapping/: main.cpp  package.xml
sim2real/ros2/src/nz-imu/hwt906/: main.cpp  serial.cpp
sim2real/src/: DMMotor.cpp  MiMotor.cpp  RMMotor.cpp  main.cpp
sim2sim/: gs2mj.py  scence.xml
sim2sim/obs_data/: base_ang_vel.npy  base_lin_vel.npy  dof_pos.npy  dof_vel.npy  projected_gravity.npy  state_observer.py
utils/: gamepad.py
