<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nz_msg</name>
  <version>0.0.0</version>
  <description>Custom message definitions for NZ project</description>
  <maintainer email="albusgive@todo.todo">albusgive</maintainer>
  <license>Apache License 2.0</license>  <!-- 必须填写实际协议 -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 关键修正：std_msgs 的拼写错误 -->
  <depend>std_msgs</depend>  <!-- 原文件中错误写成了 std_msg -->

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>